Add inline whitespace regression coverage